# shopify-mcp-server

./: load_test.py  logs.txt  pyproject.toml  render.yaml  requirements.txt  shopify.app.toml  sse_test.py
src/shopify_mcp_server/: server.py
