[project]
name = "shopify-mcp-server"
version = "1.0.0"
description = "Neolook Shopify MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.2.0",
    "ShopifyAPI>=12.7.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.46.0",
    "starlette>=1.0.0",
    "pymongo>=4.0.0",
    "cachetools>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/shopify_mcp_server"]

[tool.hatch.build.targets.wheel]
packages = ["src/shopify_mcp_server"]
